# Computer_Graphics

Computer Graphics/PA2_2017_skeleton/: CMakeCache.txt  CMakeLists.txt  Makefile  OgreFltk  README.txt  SimpleScene.cpp  WaveFrontOBJ.cpp  cmake_install.cmake
Computer Graphics/Practice3/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  p31  p32  p32s  p33  p34  practice3_1.cpp  practice3_2.cpp  practice3_2_smooth.cpp  practice3_3.cpp  practice3_4.cpp  snake  snake.cpp
